Refactor entities and console app to use Domain Value Objects